# shadycompass

./: .gitignore  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  dev_requirements.txt  pyproject.toml  requirements.txt  shadycompass.py
.github/: FUNDING.yml
.github/workflows/: app.yaml  exe.yaml
shadycompass/: __init__.py  __main__.py
shadycompass/config/: __init__.py
shadycompass/facts/: __init__.py  all.py  etc_hosts.py  filemetadata.py  nmap.py  services.py  zap.py
shadycompass/rules/: all.py  asrep_roaster.py  conditions.py  dirb.py  dnsscanner.py  etc_hosts.py  feroxbuster.py  gobuster.py  httpbusting.py  imapscanner.py  irules.py  ldapscanner.py  library.py  misc.py  nmap.py  nuclei.py  pop_scanner.py  popscanner.py  portscanner.py  scanner.py  smbscanner.py  smtpscanner.py  virtualhost_scanner.py  vulnscanner.py  wfuzz.py
tests/: test_facts.py  test_shadycompassengine.py  test_shadycompassops.py  tests.py
tests/config/: test_config.py
tests/facts/: test_cpe.py  test_etc_hosts.py  test_filemetadata.py  test_nmap.py
tests/fixtures/: shadycompass.ini
tests/rules/: base.py  test_dirb.py  test_feroxbuster.py  test_gobuster.py  test_httpbusting.py  test_portscanner.py  test_rules_asrep_roaster.py  test_rules_cve_exploit_search.py  test_rules_dns_scanner.py  test_rules_dnsscanner.py  test_rules_etc_hosts.py  test_rules_http_busting.py  test_rules_http_spider.py  test_rules_imap_scanner.py  test_rules_ldap_scanner.py  test_rules_ldapscanner.py  test_rules_misc.py  test_rules_pop_scanner.py  test_rules_popscanner.py  test_rules_port_scanner.py  (+11 more)
(+141 files in other folders)
