[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "shadycompass"
version = "0.0.5"
description = "A brief description of your project."
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT License"}
authors = [
    {name = "Patrick Double", email = "pat@patdouble.com"}
]
dependencies = [
    "prompt_toolkit==3.0.47",
    "jsonschema==4.23.0",
    "om-experta @ git+https://github.com/openmotics/om-experta@d35d53708a46482e1ee4e3a4bc1a36bc03492913#egg=om-experta",
]

[project.scripts]
shadycompass = "shadycompass.__main__:main"

[project.urls]
Homepage = "https://github.com/double16/shadycompass"
